--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,42 +1,211 @@
-.App {
-  text-align: center;
+:root {
+  --color-negro: #1B1B1D;
+  --color-blanco: #FFFFFF;
+  --color-rojo: #F04242;
+  --color-amarillo: #F7BC37;
+  --color-verde: #0ACE7C;
+  --color-azul: #4950EB;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+html{
+  background-color: var(--color-negro)
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+body {
+  margin: 0;
+  padding: 0;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+@import url('https://fonts.googleapis.com/css2?family=Anta&family=Gugi&family=Monda:wght@400..700&family=Public+Sans:ital,wght@0,100..900;1,100..900&display=swap');
 
 .App{
-  
+  font-family: "Public Sans", sans-serif;
+  font-optical-sizing: auto;
+  background-color: var(--color-negro);
+}
+
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: var(--color-negro); 
+  padding: 30px 30px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.logo img {
+  height: 30px;
+}
+
+.texts {
+  display: flex;
+  gap: 20px;
+}
+
+h1{
+  font-size: 40px;
+  bottom: 30px;
+}
+
+.texts a {
+  text-decoration: none;
+  color: var(--color-blanco);
+  font-size: 16px;
+}
+
+.switch-button {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+  background: none;
+}
+
+.switch-button input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+  background: none;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: var(--color-blanco);
+  transition: 0.4s;
+  border-radius: 34px;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px; 
+  bottom: 4px; 
+  background-color: var(--color-negro);
+  transition: 0.4s;
+  border-radius: 50%;
+}
+
+input:checked + .slider {
+  background-color: var(--color-negro);
+}
+
+input:checked + .slider:before {
+  transform: translateX(26px);
+  background-color: var(--color-blanco);
+}
+
+.switch-button .slider {
+  width: 60px;
+  height: 34px;
+}
+
+.switch-button .slider:before {
+  width: 26px;
+  height: 26px;
+}
+
+
+.cards-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 20px;
+  margin-top: 20px;
+  padding: 20px;
+  padding-left: 40px;
+  padding-right: 40px;
+}
+
+.card-item {
+  position: relative;
+  background-color: var(--color-blanco);
+  padding: 20px;
+  border-radius: 30px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 250px;
+}
+
+.card-item .card-number {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  background-color: rgba(255, 255, 255, 0.4);
+  color: var(--color-negro);
+  padding: 5px 20px;
+  border-radius: 12px;
+  font-size: 14px;
+}
+
+.card-content {
+  flex-grow: 1;
+  display: flex;
+  padding: 20px;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+
+.card-content h2 {
+  font-family: "Public Sans", sans-serif;;
+  text-align: left;
+  margin-bottom: 10px;
+  font-size: 24px;
+}
+
+#primaria {
+  background-color: var(--color-rojo);
+}
+
+#secundaria {
+  background-color: var(--color-amarillo);
+}
+
+#superior {
+  background-color: var(--color-verde);
+}
+
+#autodidacta {
+  background-color: var(--color-azul);
+}
+
+.card-item h3 {
+  color: var(--color-blanco);
+}
+
+.card-item p {
+  color: var(--color-blanco);
+}
+
+h1, h2 {
+  text-align: center;
+  margin-top: 40px;
+  color: var(--color-blanco);
+}
+
+h2{
+  font-family: "Monda", sans-serif;
+  font-size: 20px;
+}
+
+@media (max-width: 768px) {
+  .card-item {
+    height: auto;
+  }
+
+  .navbar {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .texts {
+    margin-top: 10px;
+  }
 }
