--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,12 @@
+html{
+  display: flex;
+}
+
+body {
+  width: 100%;
+  overflow: hidden;
+}
+
 :root {
   --color-fondo: #1B1B1D;
   --color-texto: #eeecea;
@@ -19,6 +28,10 @@
     background-color: rgba(255, 255, 255, 0.4);
     color: var(--color-texto);
   }
+
+  .final-text2 {
+    color: #5c5c5c;
+  }
   
 }
 
@@ -37,6 +50,8 @@ body {
   font-optical-sizing: auto;
   background-color: var(--color-fondo);
   padding-bottom: 20px;
+  height: 20000vh;
+  overflow: hidden;
 }
 
 .navbar {
@@ -69,9 +84,7 @@ h1 {
   font-size: 16px;
 }
 
-.texts a:hover,
-.texts a:active,
-.texts a.visited {
+.texts a:hover {
   text-decoration: underline;
 }
 
@@ -214,10 +227,14 @@ input:checked+.slider:before {
   color: var(--color-texto);
 }
 
+h1{
+  margin-top: 100px;
+}
+
 h1,
 h2 {
   text-align: center;
-  margin-top: 40px;
+  /* margin-top: 40px; */
   color: var(--color-texto);
 }
 
@@ -227,8 +244,45 @@ h2 {
 
 }
 
+.concepto{
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(131, 131, 131, 0.1);
+}
+
 final-text {
   margin-bottom: 0;
+}
+
+.final-text2 {
+  font-size: 1.2rem;
+  color: #a7a7a7;
+  margin-top: 10px;
+  text-align: justify;
+}
+
+.final-text2 strong {
+  color: var(--color-amarillo);
+}
+
+.final-text2 em {
+  color: var(--color-verde);
+}
+
+.final-text2 .highlight-rojo {
+  background-color: var(--color-rojo);
+  color: white;
+  padding: 0.2em 0.4em;
+  border-radius: 3px;
+}
+
+.final-text2 .highlight-azul {
+  background-color: var(--color-azul);
+  color: white;
+  padding: 0.2em 0.4em;
+  border-radius: 3px;
 }
 
 @media (max-width: 768px) {
