--- a/client/src/App.css
+++ b/client/src/App.css
@@ -244,12 +244,29 @@ h2 {
 
 }
 
-.concepto{
+.concepto {
   max-width: 800px;
   margin: 0 auto;
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(131, 131, 131, 0.1);
+  overflow-y: auto;
+  max-height: 70vh; 
+  scrollbar-width: thin;
+  scrollbar-color: var(--color-texto) var(--color-fondo);
+}
+
+.concepto::-webkit-scrollbar {
+  width: 8px;
+}
+
+.concepto::-webkit-scrollbar-thumb {
+  background-color: var(--color-azul);
+  border-radius: 4px;
+}
+
+.concepto::-webkit-scrollbar-track {
+  background-color: var(--color-fondo);
 }
 
 final-text {
